--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1> Hola Mundo </h1>
+    <br>
+    <p>Eswta parte esta destinada al texto general</p>
+    <br>
+    <h3>Mira Mamá, soy famoso!!</h3>
 </body>
 </html>
