Agregue un mensaje

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <p>Eswta parte esta destinada al texto general</p>
     <br>
     <h3>Mira Mamá, soy famoso!!</h3>
+
+    <p>Para el siguiente proyecto, esperamos trabajar de manera uniforme 
+        durante unas 2 semanas. <br>
+        Antes de que todo se vaya a la mier..
+    </p>
 </body>
 </html>
