--- a/index.html
+++ b/index.html
@@ -8,5 +8,34 @@
 </head>
 <body>
     <h1> Hola Mundo </h1>
+
+
+
+   
+
+
+
+
+
+    <button onclick="au()" >No me toques</button>
+
+
+
+    <div id="h">
+        au
+
+        hola
+    </div>
+
+
+    <script>
+        function au()
+        {
+            alert('acosador');
+         
+
+           document.getElementById('h').style.background = 'red';
+        }
+    </script>
 </body>
 </html>
